added Github and Gender field
also added appropriate values in the select fields

--- a/templates/index.html
+++ b/templates/index.html
@@ -121,74 +121,89 @@
       <h2>Apply for the Course</h2>
       <form action="." method="POST">
       {% csrf_token %}
-         <div class="row">
+  <div class="row">
             <div class="six columns">
                <div class="row">
                   <div class="six columns">
-                     <label for="exampleEmailInput">First Name</label>
+                     <label for="FirstName">First Name</label>
                      <input name="f_name" required="required" class="u-full-width" type="text" placeholder="" id="firstName">
                   </div>
                   <div class="six columns">
-                     <label for="exampleEmailInput">Last Name</label>
+                     <label for="LastName">Last Name</label>
                      <input name="l_name" required="required" class="u-full-width" type="text" placeholder="" id="lastName">
                   </div>
                </div>
             </div>
             <div class="six columns">
-               <label for="exampleRecipientInput">Course you are applying for:</label>
-               <select required="required" name="course" class="u-full-width" id="exampleRecipientInput">
-                  <option value="Option 1">Android Developement</option>
-                  <option value="Option 2">FrontEnd Web Development</option>
-                  <option value="Option 3">Python</option>
+               <div class="row">
+                  <div class="six columns">
+                     <label for="exampleRecipientInput">Gender</label>
+               <select name="gender" required="required" class="u-full-width" id="Gender">
+                  <option value="Male">Male</option>
+                  <option value="Female">Female</option>
                </select>
+                  </div>
+                  <div class="six columns">
+                     <label for="Github">Github Profile Link</label>
+                     <input name="github" required="required"  class="u-full-width" type="text" placeholder="" id="Github">
+                  </div>
+               </div>
             </div>
          </div>
          <div class="row">
             <div class="six columns">
-               <label for="exampleEmailInput">Email Id</label>
-               <input required="required" name="email" class="u-full-width" type="email" placeholder="email@mailbox.com" id="EmailID">
+               <label for="EmailInput">Email Id</label>
+               <input name="email" required="required" class="u-full-width" type="email" placeholder="email@mailbox.com" id="EmailID">
             </div>
-            <div class="six columns ">
-               <div class="row">
-                  <div class="six columns">
-                     <label for="exampleEmailInput">VTU USN</label>
-                     <input required="required" name="usn" class="u-full-width" type="text" placeholder="1RN*****" id="USN">
-                  </div>
-                  <div class="six columns">
-                     <label for="exampleEmailInput">Mobile No.</label>
-                     <input required="required" name="mobile" class="u-full-width" type="tel" placeholder="+91 **********" id="Number">
-                  </div>
-               </div>
+            <div class="six columns">
+               <label for="exampleRecipientInput">Course you are applying for</label>
+               <select name="course" required="required" class="u-full-width" id="Course">
+                  <option value="Android">Android Developement</option>
+                  <option value="FrontEnd">FrontEnd Web Development</option>
+                  <option value="Python">Python</option>
+               </select>
             </div>
          </div>
          <div class="row">
             <div class="six columns ">
                <div class="row">
                   <div class="six columns">
-                     <label for="exampleRecipientInput">College Year</label>
-                     <select required="required" name="year" class="u-full-width" id="exampleRecipientInput">
-                        <option value="Option 1">I</option>
-                        <option value="Option 2">II</option>
-                        <option value="Option 3">III</option>
-                        <option value="Option 4">IV</option>
+                     <label for="CollegeYear">College Year</label>
+                     <select name="year" required="required" class="u-full-width" id="CollegeYear">
+                        <option value="FirstYear">I</option>
+                        <option value="SecondYear">II</option>
+                        <option value="ThirdYear">III</option>
+                        <option value="FourthYear">IV</option>
                      </select>
                   </div>
                   <div class="six columns">
-                     <label for="exampleRecipientInput">Branch</label>
-                     <select required="required" name="branch" class="u-full-width" id="exampleRecipientInput">
-                        <option value="Option 1">CS</option>
-                        <option value="Option 2">EEE</option>
-                        <option value="Option 3">IS</option>
-                        <option value="Option 4">IT</option>
-                        <option value="Option 5">ECE</option>
-                        <option value="Option 6">MECH</option>
-                        <option value="Option 7">CIVIL</option>
+                     <label for="Branch">Branch</label>
+                     <select name="branch" required="required" class="u-full-width" id="Branch">
+                        <option value="CS">CS</option>
+                        <option value="EEE">EEE</option>
+                        <option value="IS">IS</option>
+                        <option value="IT">IT</option>
+                        <option value="ECE">ECE</option>
+                        <option value="MECH">MECH</option>
+                        <option value="CIVIL">CIVIL</option>
                      </select>
                   </div>
                </div>
             </div>
-               <input class="button-primary u-pull-right " type="submit" value="Submit">
+         <div class="six columns">
+          <div class="row">
+            <div class="six columns">
+               <label for="USN">VTU USN</label>
+               <input name="usn" required="required" class="u-full-width" type="text" placeholder="1RN*****" id="USN">
+            </div>
+            <div class="six columns">
+               <label for="Mobile">Mobile No.</label>
+               <input name="mobile" required="required" class="u-full-width" type="tel" placeholder="+91 **********" id="Number">
+            </div>
          </div>
+         </div>
+         </div>
+         <input class="button-primary" type="submit" value="Submit">
       </form>
    </div>
 </section>
