--- a/static/css/style.css
+++ b/static/css/style.css
@@ -69,12 +69,7 @@ button {
        right:6vw;
        position: fixed;
        z-index: 3000;
-       transform: scale(1.5);
-       transition: all .3s;
-}
-
-button:hover{
-	transform: scale(1.8);
+       transform: scale(1.3);
 }
 
 .landing{
@@ -115,13 +110,6 @@ button:hover{
 .button{
 	background-color: #FFF;
 	transition: all .3s;
-	width: 50%
-	padding: .8em .6em;
-}
-
-.button:hover{
-	color: #FFF !important;
-	background-color: black;
 }
 
 .button-primary{
@@ -170,4 +158,12 @@ button:hover{
 		display: inline;
 		height: 100%;
 	}
+
+	button {
+       bottom: 4vh;
+       right:6vw;
+       position: fixed;
+       z-index: 3000;
+       transform: scale(1);
+}
 }
